--- a/app/src/main/assets/index.html
+++ b/app/src/main/assets/index.html
@@ -10,6 +10,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		 <link rel="stylesheet" href="css/index.css" />
 		<title>订餐系统</title>
+		<script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=teYVh13SYS150viNKRMEwkQeSsazFcgK"></script>
 	</head>
 	<body>
 		<div data-role="page" id="login">
@@ -136,8 +137,7 @@
 		    <input type="text" name="phone" id="phone">
 			订购数量：<br>
 			<input type="range" name="num" id="num" value="1" min="0" max="100" data-highlight="true" />
-		   <a href="#home" data-role="button"  id="addToStorage"  />送出订购</a>
-
+		  	 <a href="#home" data-role="button"  id="addToStorage"  />送出订购</a>
 		</div>
 		<div data-role="footer" data-position="fixed" style="text-align:center">
 		 <h1>加盟热线：123456789</h1>
